# SDK

./: .gitignore  CMakeLists.txt  README.md  gripper_config.yaml  main.cpp  main1.cpp
include/: io_gripper.hpp
lib/: libio_gripper.so.1  libio_gripper.so.1.1.0
lib_arm/: libio_gripper.so.1
